logs/pelican-shiori.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/cssmin-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pelican_shiori'...
Listing './lib/python3.5/site-packages/pelican_shiori/static'...
Listing './lib/python3.5/site-packages/pelican_shiori/static/css'...
Listing './lib/python3.5/site-packages/pelican_shiori/static/css/bootstrap-sass'...
Listing './lib/python3.5/site-packages/pelican_shiori/static/css/bootstrap-sass/bootstrap'...
Listing './lib/python3.5/site-packages/pelican_shiori/static/css/bootstrap-sass/bootstrap/mixins'...
Listing './lib/python3.5/site-packages/pelican_shiori/templates'...
Listing './lib/python3.5/site-packages/pelican_shiori-0.2.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/webassets'...
Listing './lib/python3.5/site-packages/webassets/ext'...
Listing './lib/python3.5/site-packages/webassets/filter'...
Listing './lib/python3.5/site-packages/webassets/filter/cssrewrite'...
Listing './lib/python3.5/site-packages/webassets/filter/jspacker'...
Listing './lib/python3.5/site-packages/webassets/filter/rjsmin'...
Listing './lib/python3.5/site-packages/webassets-0.12.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
